<resources>
    <string name="app_name">mPulse DMT</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="task_inital_toolbar_title">Initial Task</string>
    <string name="yes_human">Yes, I am a human.</string>
    <string name="yes_robot">No, I am a robot but I am sentient and concerned about my health.
    </string>
    <string name="no_alien">No, I’m an alien.</string>
    <string name="inclusion_question">Were you born somewhere on planet earth and are you a
        human-ish?
    </string>
    <string name="sample_notification_example">Notification Permission</string>
    <string name="grant">Grant</string>

    <string name="ctf_scheduled_activities">Scheduled Activities</string>
    <string name="ctf_scheduled_activities_filename">activities</string>
    <string name="ctf_trial_activities">Trial Activities</string>
    <string name="ctf_trial_activities_filename">trialActivities</string>
    <string name="ctf_settings_activities_filename">settings</string>

    <string name="yadl_image_path">images/yadl</string>
    <string name="yadl_image_ext">jpeg</string>
    <string name="medl_image_path">images/medl</string>
    <string name="medl_image_ext">jpg</string>
    <string name="overlay_image_path">images</string>
    <string name="overlay_image_ext">png</string>
    <string name="impulse_external_id">Sign In</string>
    <string name="impulse_consent">Sign In</string>

    <string name="plus">Plus</string>

    <string name="total_earnings_default_text">Balloon 1 out of 15.\nTotal Earnings: $0.00</string>
    <string name="potential_gain_default_text">Potential Gain: \n$0.00</string>


    <string name="dd_prompt_default_text">Please choose which amounts of money you would like either right NOW or in ONE MONTH.</string>
    <string name="dd_now_button_default_text">$50.00\nNow</string>
    <string name="dd_later_button_default_text">$100.00\nNow</string>

    <string name="ctf_state_helper_path">/state_helper</string>

    <string name="morning_notification_text">Hey, it\'s time to take your morning survey!</string>
    <string name="evening_notification_text">Hey, it\'s time to take your evening survey!</string>
    <string name="day_21_notification_text">Hey, it\'s time to take your 21 day survey!</string>

    <string name="show_trial_activities">Show Trial Activities</string>
    <string name="set_morning_survey_time">Set Morning Survey Time</string>
    <string name="set_evening_survey_time">Set Evening Survey Time</string>
    <string name="participant_since">Participant Since</string>
    <string name="comments">Comments?</string>
    <string name="sign_out">Sign Out</string>
    <string name="impulsivity_settings_version">Version %1$s (Build %2$d). Installed on %3$s</string>

    <string name="bridge_external_id_format">rvitale+%s@northwell.edu</string>
    <string name="osb_base_url">https://webservices.sagebridge.org/</string>
    <string name="osb_study_id">digital-marshmallow</string>
    <string name="osb_study_name">mPulse DMT</string>
    <string name="osb_study_public_key">digital-marshmallow.pem</string>



</resources>
